更新了首页的错别字

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="about-content clearfix section-content">
 			<div class="left">
 				<h1>关于爱普骑士团</h1>
-				<p class="fade fade1">2023.07 年爱普骑士团雏形出现</p>
+				<p class="fade fade1">2023.04 年爱普骑士团雏形出现</p>
 				<p class="fade fade2">2023.09 年爱普骑士团正式成立</p>
 				<p class="fade fade3">迄今以来 爱普骑士团时刻守卫公主殿下</p>
 				<p class="fade fade3">幕后守卫 成为公主拳下的幕刃</p>
@@ -69,7 +69,7 @@
 						<div class="work-info">
 							<h2>技高一筹</h2>
 							<p><strong>出品时间</strong>：2023年07月<br>
-							<strong>团队详情</strong>：由拿队友当宝搞等一众爱普人士组建，每个人时刻准备维护公主人设等。</p>
+							<strong>团队详情</strong>：由拿队友当宝稿等一众爱普人士组建，每个人时刻准备维护公主人设。</p>
 						</div>
 					</a>
 				</div>
@@ -79,7 +79,7 @@
 						<div class="work-info">
 							<h2>普门的世界</h2>
 							<p><strong>出品时间</strong>：2023年07月<br>
-							<strong>团队详情</strong>：由拿队友当宝搞等一众爱普人士组建，每个人时刻准备维护公主人设等。</p>
+							<strong>团队详情</strong>：由拿队友当宝稿等一众爱普人士组建，每个人时刻准备维护公主人设。</p>
 						</div>
 					</a>
 				</div>
@@ -89,7 +89,7 @@
 						<div class="work-info">
 							<h2>公主的智慧</h2>
 							<p><strong>出品时间</strong>：2023年08月<br>
-							<strong>团队详情</strong>：由拿队友当宝搞等一众爱普人士组建，每个人时刻准备维护公主人设等。</p>
+							<strong>团队详情</strong>：由拿队友当宝稿等一众爱普人士组建，每个人时刻准备维护公主人设。</p>
 						</div>
 					</a>
 				</div>
@@ -97,9 +97,9 @@
 					<a href="https://www.bilibili.com/video/BV1PV4y1Y7vp/?spm_id_from=333.999.0.0" target="_blank">
 						<img src="images/works/shield.jpg" alt="" width="300" height="180">
 						<div class="work-info">
-							<h2>骑士团团长守卫！</h2>
+							<h2>团长的倾心</h2>
 							<p><strong>出品时间</strong>：2023年08月<br>
-							<strong>团队详情</strong>：由拿队友当宝搞等一众爱普人士组建，每个人时刻准备维护公主人设等。</p>
+							<strong>团队详情</strong>：由拿队友当宝稿等一众爱普人士组建，每个人时刻准备维护公主人设。</p>
 						</div>
 					</a>
 				</div>
@@ -109,7 +109,7 @@
 						<div class="work-info">
 							<h2>骑士团团长守卫！</h2>
 							<p><strong>出品时间</strong>：2023年08月<br>
-							<strong>团队详情</strong>：由拿队友当宝搞等一众爱普人士组建，每个人时刻准备维护公主人设等。</p>
+							<strong>团队详情</strong>：由拿队友当宝稿等一众爱普人士组建，每个人时刻准备维护公主人设。</p>
 						</div>
 					</a>
 				</div>
@@ -119,7 +119,7 @@
 						<div class="work-info">
 							<h2>大音乐家普可夫斯基</h2>
 							<p><strong>出品时间</strong>：2023年08月<br>
-							<strong>团队详情</strong>：由拿队友当宝搞等一众爱普人士组建，每个人时刻准备维护公主人设等。</p>
+							<strong>团队详情</strong>：由拿队友当宝稿等一众爱普人士组建，每个人时刻准备维护公主人设。</p>
 						</div>
 					</a>
 				</div>
@@ -157,7 +157,7 @@
 					<h2>社交网络</h2>
 					<ul>
 						<li>B站：<a target="_blank" href="https://space.bilibili.com/19526109/video</a></li>
-						<li>QQ 1940627136：<a target="_blank" href="zpt1ga3m6zkxxz0t@qq.com">@拿队友当宝搞</a></li>
+						<li>QQ 1940627136：<a target="_blank" href="zpt1ga3m6zkxxz0t@qq.com">@拿队友当宝稿</a></li>
 						<li>公主B站：<a target="_blank" href="https://space.bilibili.com/4143375?spm_id_from=333.337.0.0">@公主殿下</a></li>
 					</ul>
 				</div>
@@ -170,11 +170,11 @@
 				<h2>爱普骑士团招募契</h2>
 				<p>如果你有跟公主一起开荒或者打本的经历想与群友探讨：</p>
 				<ul>
-					<li>请及时联系拿队友当宝搞获取爱普骑士团最新动态。</li>
+					<li>请及时联系拿队友当宝稿获取爱普骑士团最新动态。</li>
 					<li>在这个大家庭中你可以倾诉你对公主的情感。</li>
 					<li>你也可以将你的经历整理成B站视频等分享给大家。</li>
 					<li>对于爱普骑士团的建设，如果你有任何更好的见解欢迎及时提出！</li>
-					<li>入群流程：<a target="_blank" href="https://space.bilibili.com/19526109?spm_id_from=333.337.search-card.all.click">联系拿队友当宝搞</a></li>
+					<li>入群流程：<a target="_blank" href="https://space.bilibili.com/19526109?spm_id_from=333.337.search-card.all.click">联系拿队友当宝稿</a></li>
 					<li>精选作品：<a target="_blank" href="https://www.bilibili.com/video/BV1hV4y1h7Wq/?spm_id_from=333.999.0.0">《普门的世界》</a></li>
 				</ul>
 			</div>
